<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ogaga.flash.acitivies.SellActivity">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="2">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                style="@style/ivAvatar"
                android:layout_column="1"
                android:id="@+id/ivAvatar"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:id="@+id/btnChoseAvatar"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etProductname"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <Spinner
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spProductType"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:inputType="numberDecimal"
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etProductPrice"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/product_quanlity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <Spinner
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spProductUnit"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/product_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <Spinner
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spProductStatus"
                />
        </TableRow>

        <TableRow
            android:id="@+id/trDateStart">
            <TextView
                android:text="@string/product_startat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:inputType="date"
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etDateStart"
                />
        </TableRow>
        <TableRow
            android:id="@+id/trDateFinished">
            <TextView
                android:text="@string/product_finished_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:inputType="date"
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etDateFinished"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/btnSubmit"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
