<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ogaga.flash.acitivies.UserProfileActivity">

    <!-- The ActionBar displayed at the top-->
    <include
        layout="@layout/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_header"
        android:id="@+id/LProfile">

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivUser"
            android:text="@string/full_name" />

        <TextView
            android:id="@+id/tvPhonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFullName"
            android:layout_toRightOf="@+id/ivUser"
            android:text="@string/phonenumber" />

        <TextView
            android:id="@+id/tvCountTrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPhonenumber"
            android:layout_toRightOf="@+id/ivUser"
            android:text="@string/count_success_transaction" />

    </RelativeLayout>

    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/LProfile"
        app:pstsShouldExpand="true"
        app:pstsTextAllCaps="true" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabs"
        android:background="@android:color/white" />

</RelativeLayout>
