<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ogaga.flash.acitivies.LoginActivity">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="2">
        <TableRow>
            <TextView
                android:text="@string/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etPhonenumber"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" />
            <EditText
                android:inputType="textPassword"
                android:width="200px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"            >
            <TextView
                style="@style/hyperlink"
                android:text="@string/registry_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegistry"
                android:layout_column="2" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/btnLogin"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
